--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.organizeit">
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -32,6 +33,11 @@
         <activity android:name=".CategoriesActivity">
 
         </activity>
+
+        <activity android:name=".Activity_CreateCategory">
+
+        </activity>
+
 
         <meta-data
             android:name="preloaded_fonts"
