--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,10 @@
 
         </activity>
 
+        <activity android:name=".ModifyDataActivity">
+
+        </activity>
+
 
         <meta-data
             android:name="preloaded_fonts"
